# incipit

./: .gitignore  Cargo.toml  README.md  README.zh.md  package-lock.json  package.json
.github/workflows/: release.yml
companion/claude-folder-reference/: extension.js  package.json
data/: capability.js  checkpoint_timeline.cjs  claude_code_enhance.js  commit_message_bundle.js  commit_message_package.json  enhance_footer_badge.js  enhance_legacy.js  enhance_shared.js  enhance_thinking.js  enhance_typography.js  host-badge.cjs  host_probe.js  hunkwise_bundle.js  markdown_preprocess.js  mermaid_render.js  protocol_tags.js  runtime_kernel.js  theme.css  warm-white-override.css
docs/: ui-roadmap.md
src/: backup.js  config.js  deep-scan.js  file-dialog.js  frontispiece.js  host-detect.js  i18n.js  install.js  menu.js  patch-contract.js  select.js  updater.js  workbench-overlay.js
tests/: apply-warnings.test.js  auth-login-guard.test.js  cache-history-buckets.test.js  change-review.test.js  checkpoint-timeline.test.js  cjk-literary-no-faux-bold.test.js  commit-message.test.js  deep-scan-results-screen.test.js  deep-scan.test.js  deferred-next.test.js  drop-paths.test.js  editor-overlay-insiders.test.js  file-reveal.test.js  folder-reference.test.js  host-detect-manual-add.test.js  markdown-preprocess.test.js  mermaid-render.test.js  notes.test.js  patch-contracts.test.js  prompt-enhancer-fallback.test.js  protocol-tags.test.js  rerun-handoff.test.js  selection-reference.test.js  session-identity.test.js  tool-chrome-mo-loop.test.js  ui-roadmap.test.js  updater.test.js
(+30 files in other folders)
